--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="CSS/stylesheet.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <link href="images/favicon.ico" rel="icon" type="image/x-icon" />
     <title>Document</title>
 </head>
 
 <body>
     <div id="button">
-        <button>Cat</button>
+        <button id="cat">Cat</button>
     </div>
 </body>
 
