set up the divs for the animation, add readme

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <div id="button">
         <button id="cat">Cat</button>
     </div>
+    <div id="container">
+        <div id="animate">
+
+        </div>
+    </div>
 </body>
 
 </html>
