--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="button">
-        <button id="cat">Cat</button>
+        <button id="cat">Nyan</button>
     </div>
     <div id="container">
         <div id="animate">
