--- a/index.html
+++ b/index.html
@@ -6,18 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="CSS/style.css">
     <link href="images/favicon.ico" rel="icon" type="image/x-icon" />
-    <title>Document</title>
+    <title>Nyan</title>
 </head>
 
 <body>
     <div id="button">
-        <button id="cat">Nyan</button>
+        <button id="cat">Nyan</button onclick="myMove()">
     </div>
     <div id="container">
-        <div id="animate">
-
-        </div>
+        <img id="animate" src="/images/Nyan.png">
     </div>
 </body>
+
+<script>
+function myMove() {
+  var elem = document.getElementById("animate");   
+  var pos = 0;
+  var id = setInterval(frame, 5);
+  function frame() {
+    if (pos == 350) {
+      clearInterval(id);
+    } else {
+      pos++; 
+      elem.style.top = pos + "px"; 
+      elem.style.left = pos + "px"; 
+    }
+  }
+}
+</script>
 
 </html>
