--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Nyan</title>
 </head>
 
-<body>
+<body id="body">
     <div id="button">
         <button onclick="nyan()" id="cat">Nyan</button>
     </div>
@@ -20,7 +20,7 @@
 
 <script>
     function nyan() {
-        document.getElementsByName('body').style.background = "url('images/background.png')"
+        document.getElementsById('body').style.background = "url('images/background.png')"
     }
 </script>
 
