--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
     <title>Nyan</title>
 </head>
 
-<body id="body">
+<body>
     <div id="button">
         <button onclick="nyan()" id="cat">Nyan</button>
-    </div>
-    <div id="container">
-        <img id="animate" src="/images/Nyan.png">
     </div>
 </body>
 
 <script>
     function nyan() {
-        document.getElementsById('body').style.background = "url('images/background.png')"
+        document.body.style.background = "url('/images/background.png')";
+
     }
 </script>
 
