set yp the basic animationn the button coming and going

--- a/index.html
+++ b/index.html
@@ -10,15 +10,32 @@
 </head>
 
 <body>
-    <div id="button">
-        <button onclick="nyan()" id="cat">Nyan</button>
+    <div id="container">
+        <img id="animate" src="/images/Nyan.png" alt="Nyan cat" style="display: none">
+        <div id="button">
+            <button onclick="nyan()" id="cat">Nyan</button>
+        </div>
     </div>
 </body>
 
 <script>
     function nyan() {
-        document.body.style.background = "url('/images/background.png')";
+        var elem = document.getElementById("animate");
+        var pos = 0;
+        var id = setInterval(frame, 5);
 
+        function frame() {
+            document.getElementById("button").style.display = "none";
+            document.getElementById("animate").style.display = "block";
+            if (pos == 350) {
+                clearInterval(id);
+                document.getElementById("button").style.display = "block";
+            } else {
+                pos++;
+                elem.style.top = pos + 'px';
+                elem.style.left = pos + 'px';
+            }
+        }
     }
 </script>
 
