--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
     <div id="container">
         <audio id="song" src="/audio/audio.mp3"></audio>
         <img id="animate" src="/images/Nyan.png" alt="Nyan cat" style="display: none">
-        <img id="animate2" src="/images/Nyan.png" alt="Nyan cat" style="display: none">
-        <img id="animate3" src="/images/Nyan.png" alt="Nyan cat" style="display: none">
-        <img id="animate4" src="/images/Nyan.png" alt="Nyan cat" style="display: none">
-        <img id="animate5" src="/images/Nyan.png" alt="Nyan cat" style="display: none">
 
         <div id="button">
             <button onclick="nyan()" id="cat">Nyan</button>
@@ -37,7 +33,6 @@
         function frame() {
             document.getElementById("button").style.display = "none";
             document.getElementById("animate").style.display = "block";
-            document.getElementById("animate2").style.display = "block";
             document.getElementById("song").play();
             document.body.style.background = "url('/images/background-gif.gif')";
             elem.style.left = '5px';
@@ -46,16 +41,15 @@
                 clearInterval(id);
                 document.getElementById("button").style.display = "block";
                 document.getElementById("animate").style.display = "none";
-                document.getElementById("animate").style.display = "none";
                 document.getElementById("song").pause();
                 document.body.style.background = "none";
 
             } else {
                 pos++;
+                pos2++;
                 elem.style.top = pos + 'px';
                 elem.style.left = pos + 'px';
-                elem2.style.top = pos + 'px';
-                elem2.style.left = pos + 'px';
+
 
 
 
