reduce to a single animatio

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
-    <div id="container">
+    <div class="container">
         <audio id="song" src="/audio/audio.mp3"></audio>
         <img id="animate" src="/images/Nyan.png" alt="Nyan cat" style="display: none">
+        <div class="container">
+            <img id="animate2" src="/images/Nyan.png" alt="Nyan cat" style="display: none">
+        </div>
 
         <div id="button">
             <button onclick="nyan()" id="cat">Nyan</button>
@@ -23,8 +26,6 @@
 <script>
     function nyan() {
         var elem = document.getElementById("animate");
-        var elem2 = document.getElementById("animate2");
-
         var pos = 0;
         var id = setInterval(frame, 5);
 
@@ -32,21 +33,21 @@
 
         function frame() {
             document.getElementById("button").style.display = "none";
-            document.getElementById("animate").style.display = "block";
+            elem.style.display = "block";
             document.getElementById("song").play();
             document.body.style.background = "url('/images/background-gif.gif')";
             elem.style.left = '5px';
 
-            if (pos == 500) {
+            if (pos == 2000) {
                 clearInterval(id);
                 document.getElementById("button").style.display = "block";
-                document.getElementById("animate").style.display = "none";
+                elem.style.display = "none";
+                elem2.style.display = "none";
                 document.getElementById("song").pause();
                 document.body.style.background = "none";
 
             } else {
                 pos++;
-                pos2++;
                 elem.style.top = pos + 'px';
                 elem.style.left = pos + 'px';
 
