--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/Nyan/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link href="/Nyan/images/favicon.ico" rel="icon" type="image/x-icon" />
     <title>Nyan</title>
-    <script src="/Nyan/script/script.js"></script>
+    <script src="/script/script.js"></script>
 </head>
 
 <body>
-    <div class="container">
+    <div id="container">
+        <div id="animate"></div>
         <audio id="song" src="/Nyan/audio/audio.mp3"></audio>
-        <img id="animate" src="/Nyan/images/Nyan.png" alt="Nyan cat">
-        <link rel="script" href="/Nyan/script.js">
-
         <div id="button">
             <button id="cat">Nyan</button>
         </div>
