fix the script filepath

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/Nyan/css/style.css">
     <link href="/Nyan/images/favicon.ico" rel="icon" type="image/x-icon" />
     <title>Nyan</title>
-    <script src="/script/script.js"></script>
+    <script src="/Nyan/script/script.js"></script>
 </head>
 
 <body>
