change function to display image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
     <div id="container">
-        <div id="animate"></div>
+        <div id="animate">
+            <img id="kitty" class="smolkitty" src="/images/Nyan.png" alt="image onf Nyan cat" style="display: none;">
+        </div>
         <audio id="song" src="/audio/audio.mp3"></audio>
         <div id="button">
             <button id="cat">Nyan</button>
