changed filepaths for repo

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/style.css">
-    <link href="/images/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="/nyan/images/favicon.ico" rel="icon" type="/nyan/image/x-icon" />
     <title>Nyan</title>
-    <script src="/script/script.js"></script>
+    <script src="/nyan/script/script.js"></script>
 </head>
 
 <body>
     <div id="container">
         <div id="animate">
-            <img id="kitty" class="smolkitty" src="/images/Nyan.png" alt="image onf Nyan cat" style="display: none;">
+            <img id="kitty" class="smolkitty" src="/nyan/images/Nyan.png" alt="image onf Nyan cat" style="display: none;">
         </div>
-        <audio id="song" src="/audio/audio.mp3"></audio>
+        <audio id="song" src="/nyan/audio/audio.mp3"></audio>
         <div id="button">
             <button id="cat">Nyan</button>
         </div>
